using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
   
    public static class PlayerConstants {

        public const string IsWalkingDown = "IsWalkingDown";
        public const string IsWalkingUp = "IsWalkingUp";
        public const string IsWalkingLeft = "IsWalkingLeft";
        public const string IsWalkingRight = "IsWalkingRight";

    }

    public static class CatFightConstants {

        public const string IsBlack = "IsBlack";
        public const string IsBlue = "IsBlue";
        public const string IsCalico = "IsCalico";
        public const string IsOrange = "IsOrange";
        public const string IsSiamese = "IsSiamese";
        public const string IsTortoiseshell = "IsTortoiseshell";
        public const string IsTuxedo = "IsTuxedo";
        public const string IsWhite = "IsWhite";

        public const string WatchingBlack = "WatchingBlack";
        public const string WatchingBlue = "WatchingBlue";
        public const string WatchingCalico = "WatchingCalico";
        public const string WatchingOrange = "WatchingOrange";
        public const string WatchingSiamese = "WatchingSiamese";
        public const string WatchingTortoiseshell = "WatchingTortoiseshell";
        public const string WatchingTuxedo = "WatchingTuxedo";
        public const string WatchingWhite = "WatchingWhite";

    }

}
